Implementing authenticationRequired
